restrict measurement_chain-1.0.0.yaml to only allow forward edges

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/edge-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/edge-1.0.0.yaml
@@ -11,8 +11,9 @@ description: |
 
 type: object
 properties:
-  inverted:
-    type: boolean
+  direction:
+    type: string
+    enum: [fwd, bwd]
   target_node:
     tag: "tag:weldx.bam.de:weldx/core/graph/node-1.0.0"
   attributes:
