--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/measurement_chain-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/measurement_chain-1.0.0.yaml
@@ -38,6 +38,8 @@ definitions:
             required: [signal_transform]
           target_node:
             $ref: "#/definitions/signal_node"
+          direction:
+            enum: [fwd]
         required: [attributes]
 
 type: object
