--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,13 @@ install_requires =
     k3d
     meshio
 
+[options.extras_require]
+test =
+    pytest
+    pytest-cov
+    pytest-xdist
+    nbval
+
 include_package_data = True
 
 [options.entry_points]
