replace $ref when tags are used

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/joint_penetration-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/joint_penetration-1.0.0.yaml
@@ -21,7 +21,7 @@ properties:
   root_penetration:
     description: |
       The distance the weld metal extends into the root joint
-    $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
+    tag: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
 
   groove_weld_size:
     description: |
