--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
@@ -101,15 +101,15 @@ properties:
   time:
     description: |
       A list of timestamps
-    tag: tag:weldx.bam.de:weldx/time/timedeltaindex-1.0.0
+    tag: "tag:weldx.bam.de:weldx/time/timedeltaindex-1.0.0"
   coordinates:
     description: |
       An ndarray containing the coordinates.
-    tag: tag:weldx.bam.de:weldx/core/variable-1.0.0
+    tag: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
   orientations:
     description: |
       An ndarray containing the orientations.
-    tag: tag:weldx.bam.de:weldx/core/variable-1.0.0
+    tag: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
 
 wx_shape:
   (coordinates):
