--- a/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_unit_validator-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_unit_validator-1.0.0.yaml
@@ -11,21 +11,21 @@ properties:
   length_prop:
     description: |
       a simple length quantity with unit validator
-    tag: tag:stsci.edu:asdf/unit/quantity-1.1.0
+    tag: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
     wx_unit: "m"
 
   velocity_prop:
     description: |
       a simple velocity quantity
     allOf:
-      - $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
+      - tag: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
       - type: object
         wx_unit: "m/s"
 
   current_prop:
     description: |
       a current quantity of shape [2,2]
-    $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
+    tag: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
 
   nested_prop:
     description: |
@@ -34,10 +34,10 @@ properties:
     properties:
       q1:
         description: a nested length of shape [3,3]
-        $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
+        tag: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
       q2:
         description: a volume
-        $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
+        tag: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
     wx_unit:
       q1: "m"
 
