--- a/weldx/asdf/schemas/weldx.bam.de/weldx/equipment/generic_equipment-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/equipment/generic_equipment-1.0.0.yaml
@@ -41,11 +41,11 @@ properties:
   sources:
     type: array
     items:
-      $ref: "tag:weldx.bam.de:weldx/measurement/source-1.0.0"
+      tag: "tag:weldx.bam.de:weldx/measurement/source-1.0.0"
   data_transformations:
     type: array
     items:
-      $ref: "tag:weldx.bam.de:weldx/measurement/data_transformation-1.0.0"
+      tag: "tag:weldx.bam.de:weldx/measurement/data_transformation-1.0.0"
 
 propertyOrder: [name, sources, data_transformations]
 required: [name]
