--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/data_array-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/data_array-1.0.0.yaml
@@ -21,11 +21,11 @@ properties:
       An array of variables that represent coordinates.
     type: array
     items:
-      $ref: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
+      tag: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
   data:
     description: |
       The actual data.
-    $ref: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
+    tag: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
 
 required: [attributes, coordinates, data]
 propertyOrder: [attributes, coordinates, data]
