--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/dataset-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/dataset-1.0.0.yaml
@@ -21,19 +21,19 @@ properties:
       An array of dimensions.
     type: array
     items:
-      $ref: "tag:weldx.bam.de:weldx/core/dimension-1.0.0"
+      tag: "tag:weldx.bam.de:weldx/core/dimension-1.0.0"
   coordinates:
     description: |
       An array of variables that represent coordinates.
     type: array
     items:
-      $ref: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
+      tag: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
   variables:
     description: |
       An array of variables.
     type: array
     items:
-      $ref: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
+      tag: "tag:weldx.bam.de:weldx/core/variable-1.0.0"
 
 required: [dimensions, coordinates, variables]
 propertyOrder: [attributes, dimensions, coordinates, variables]
