--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy-1.0.0.yaml
@@ -95,7 +95,7 @@ properties:
       towards their parent system.
     type: array
     items:
-      $ref: "tag:weldx.bam.de:weldx/core/transformations/coordinate_transformation-1.0.0"
+      tag: "tag:weldx.bam.de:weldx/core/transformations/coordinate_transformation-1.0.0"
 
 propertyOrder: [name, root_system_name, reference_time, subsystems, subsystem_data,  coordinate_systems]
 required: [name, root_system_name, coordinate_systems]
