--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/data_transformation-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/data_transformation-1.0.0.yaml
@@ -35,13 +35,13 @@ properties:
   name:
     type: string
   input_signal:
-    $ref: "tag:weldx.bam.de:weldx/measurement/signal-1.0.0"
+    tag: "tag:weldx.bam.de:weldx/measurement/signal-1.0.0"
   output_signal:
-    $ref: "tag:weldx.bam.de:weldx/measurement/signal-1.0.0"
+    tag: "tag:weldx.bam.de:weldx/measurement/signal-1.0.0"
   error:
-    $ref: "tag:weldx.bam.de:weldx/measurement/error-1.0.0"
+    tag: "tag:weldx.bam.de:weldx/measurement/error-1.0.0"
   func:
-    $ref: "tag:weldx.bam.de:weldx/core/mathematical_expression-1.0.0"
+    tag: "tag:weldx.bam.de:weldx/core/mathematical_expression-1.0.0"
 
 required: [name, input_signal, output_signal]
 propertyOrder: [name, input_signal, output_signal, error, func]
