--- a/weldx/asdf/schemas/weldx.bam.de/weldx/time/timedeltaindex-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/time/timedeltaindex-1.0.0.yaml
@@ -34,7 +34,7 @@ definitions:
   values:
     description: |
       Integer representation of a pandas TimedeltaIndex in nanoseconds precision.
-    $ref: tag:stsci.edu:asdf/core/ndarray-1.0.0
+    tag: "tag:stsci.edu:asdf/core/ndarray-1.0.0"
 
   start:
     description: |
