add wx_unit to gas_component-1.0.0.yaml

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/aws/process/gas_component-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/aws/process/gas_component-1.0.0.yaml
@@ -34,6 +34,7 @@ properties:
     description: |
       Percentage by weight this gas occupies of the total gas mixture.
     tag: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
+    wx_unit: "percent"
 
 
 
