--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        py: ['3.8', '3.9']
+        py: ['3.9']
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -48,6 +48,7 @@ jobs:
           pytest --runslow -n2 tests/
           echo "Exited with '$?'"
           mv .coverage .coverage.tests
+          ls -alh
 
       - name: run pytest on notebooks
         run: |
