--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        py: ['3.9']
+        py: ['3.8', '3.9']
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -47,19 +47,15 @@ jobs:
         run: |
           pytest --runslow -n2 tests/
           echo "Exited with '$?'"
-          mv .coverage .coverage.tests
-          ls -alh
 
-      - name: run pytest on notebooks
+      - name: run pytest on notebooks (append coverage)
         run: |
-          pytest -n2 --dist loadscope --nbval --current-env --cov=weldx tutorials/
+          pytest -n2 --dist loadscope --nbval --current-env --cov=weldx --cov-append tutorials/
           echo "Exited with '$?'"
           ls -alh
 
-      - name: coverage merge/xml
-        run: |
-          coverage combine
-          coverage xml
+      - name: coverage xml (combination is performed by pytest-cov)
+        run: coverage xml
 
       - name: codecov.io
         uses: codecov/codecov-action@v1
