workaround a bug in pip

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ project_urls =
     Changelog = https://github.com/BAMweldx/weldx/blob/master/CHANGELOG.md
 
 [options]
-packages = weldx
+packages = find:
 python_requires = >=3.8
 setup_requires =
     setuptools >=38.3.0
