set default pytest multiprocessing to auto

--- a/setup.cfg
+++ b/setup.cfg
@@ -92,7 +92,7 @@ match_dir = [^\.][^\docs].*
 ignore = D203,D213
 
 [tool:pytest]
-addopts = --tb=short --color=yes -rs --cov=weldx --cov-report=term-missing:skip-covered
+addopts = --tb=short --color=yes -rs --cov=weldx --cov-report=term-missing:skip-covered -n auto
 #addopts = --tb=short --color=yes -rs -p no:cov
 # custom test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
 markers =
