--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -45,13 +45,13 @@ jobs:
 
       - name: run pytest
         run: |
-          pytest --runslow -n2 tests/
+          pytest --runslow tests/
           echo "Exited with '$?'"
 
       - name: run pytest on notebooks (append coverage)
         if: (matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')
         run: |
-          pytest -n2 --dist loadscope --nbval --current-env --cov=weldx --cov-append tutorials/
+          pytest --dist loadscope --nbval --current-env --cov=weldx --cov-append tutorials/
           echo "Exited with '$?'"
 
       - name: coverage xml (combination is performed by pytest-cov)
