--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -44,8 +44,8 @@ jobs:
         run: pip install -e .[test]
 
       - name: setup matplotlib
-        - if: startsWith(runner.os, 'Windows')
-          - run: |
+        if: startsWith(runner.os, 'Windows')
+        run: |
             if not exist %userprofile%\.matplotlib\ mkdir %userprofile%\.matplotlib\
             echo "backend: Agg" > %userprofile%\.matplotlib\matplotlibrc
 
