--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -48,6 +48,7 @@ jobs:
         run: |
             if not exist %userprofile%\.matplotlib\ mkdir %userprofile%\.matplotlib\
             echo "backend: Agg" > %userprofile%\.matplotlib\matplotlibrc
+        shell: cmd
 
       - name: run pytest
         run: |
