--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ setup_requires =
     setuptools >=38.3.0
     setuptools_scm
 install_requires =
+    setuptools_scm
     numpy >=0.18
     pandas >=1.0
     xarray >=0.15
