--- a/.github/workflows/pytest_asdf.yml
+++ b/.github/workflows/pytest_asdf.yml
@@ -16,6 +16,7 @@ jobs:
           python-version: ${{ matrix.py }}
       - name: pip installs
         run: |
+          pip install setuptools_scm
           pip install -e .[test]
       - name: run pytest
         run: |
