--- a/setup.cfg
+++ b/setup.cfg
@@ -31,13 +31,12 @@ project_urls =
     Changelog = https://github.com/BAMweldx/weldx/blob/master/CHANGELOG.md
 
 [options]
-packages = find:
+packages = weldx
 python_requires = >=3.8
 setup_requires =
     setuptools >=38.3.0
     setuptools_scm
 install_requires =
-    setuptools_scm
     numpy >=0.18
     pandas >=1.0
     xarray >=0.15
