--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -13,7 +13,7 @@ build:
   noarch: python
 
 requirements:
-    host:
+    build:
         - python >=3.8
         - setuptools
         - setuptools_scm
