--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -14,11 +14,11 @@ build:
 
 requirements:
     build:
-        - python >=3.8
+        - python
         - setuptools
         - setuptools_scm
     run:
-        - python >=3.8
+        - python
         # dependencies are defined in setup.py
         {% for dep in data['install_requires'] %}
         - {{ dep.lower() }}
