add python runtime requirement and install nbval

--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -18,7 +18,7 @@ requirements:
         - setuptools
         - setuptools_scm
     run:
-        - python
+        - python >=3.8
         # dependencies are defined in setup.py
         {% for dep in data['install_requires'] %}
         - {{ dep.lower() }}
