--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: pip installs
         run: |
-          pip install pytest pytest-cov pytest-xdist setuptools_scm
+          pip install pytest pytest-cov pytest-xdist setuptools_scm nbval
           pip install -e .
 
       - name: run pytest
