--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -43,6 +43,13 @@ jobs:
       - name: pip installs
         run: pip install -e .[test]
 
+      - name: setup matplotlib
+        if: startsWith(runner.os, 'Windows')
+        run: |
+            if not exist %userprofile%\.matplotlib\ ( mkdir %userprofile%\.matplotlib\ )
+            echo "backend: Agg" > %userprofile%\.matplotlib\matplotlibrc
+        shell: cmd
+
       - name: run pytest
         run: |
           pytest -n 2 --runslow tests/
