add files need for tests

--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -31,6 +31,8 @@ test:
   source_files:
     - tests/*.py
     - tests/asdf_tests/*.py
+    - doc/_static/WelDX_notext.ico
+    - doc/_static/WelDX_notext.svg
   imports:
     - weldx
     - weldx.visualization
