--- a/setup.cfg
+++ b/setup.cfg
@@ -110,7 +110,7 @@ sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 [coverage:report]
 omit =
     weldx/_version.py
-    weldx/scripts/*
+    weldx/tests/*
 
 exclude_lines =
 # Have to re-enable the standard pragma
