update pytest actions

--- a/.github/workflows/pytest_asdf.yml
+++ b/.github/workflows/pytest_asdf.yml
@@ -19,4 +19,4 @@ jobs:
           pip install -e .[test]
       - name: run pytest
         run: |
-          pytest --asdf-tests --ignore=tests/ --no-cov
+          pytest --asdf-tests --ignore=weldx/tests/ --no-cov
