--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -47,7 +47,7 @@ jobs:
         if: startsWith(runner.os, 'Windows')
         run: |
             if not exist %userprofile%\.matplotlib\ ( mkdir %userprofile%\.matplotlib\ )
-            echo "backend: Agg" > %userprofile%\.matplotlib\matplotlibrc
+            echo backend: Agg > %userprofile%\.matplotlib\matplotlibrc
             python -c "import matplotlib as m; print(m.matplotlib_fname())"
         shell: cmd
 
