--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -41,13 +41,17 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: pip installs
-        run: pip install -e .[test]
+        run: |
+          pip install wheel
+          pip install -e .[test]
 
       - name: setup matplotlib
         if: startsWith(runner.os, 'Windows')
         run: |
             if not exist %userprofile%\.matplotlib\ ( mkdir %userprofile%\.matplotlib\ )
-            echo "backend: Agg" > %userprofile%\.matplotlib\matplotlibrc
+            echo backend: Agg > %userprofile%\.matplotlib\matplotlibrc
+            python -c "import matplotlib as m; print(m.matplotlib_fname())"
+            python -c "import matplotlib as m; print(m.rc_params()['backend'])"
         shell: cmd
 
       - name: run pytest
