--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/node-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/node-1.0.0.yaml
@@ -12,7 +12,9 @@ description: |
 type: object
 properties:
   name:
-    type: string
+    oneOf:
+      - type: string
+      - tag: "tag:weldx.bam.de:weldx/core/uuid-1.0.0"
   edges:
     type: array
     items:
@@ -20,6 +22,6 @@ properties:
   attributes:
     type: object
 
-required: [name, edges]
+required: [edges]
 propertyOrder: [name, attributes, edges]
 ...
