--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/edge-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/edge-1.0.0.yaml
@@ -20,5 +20,5 @@ properties:
     type: object
 
 required: [target_node]
-propertyOrder: [inverted, attributes, target_node]
+propertyOrder: [direction, attributes, target_node]
 ...
