--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/uuid-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/uuid-1.0.0.yaml
@@ -5,11 +5,14 @@ id: "http://weldx.bam.de/schemas/weldx/core/uuid-1.0.0"
 tag: "tag:weldx.bam.de:weldx/core/uuid-1.0.0"
 
 title: |
+  Version 4 UUID
+description: |
   A version 4 UUID as specified by RFC 4122.
 
 type: object
 properties:
   uuid:
+    description: The UUID with characters in lowercase.
     type: string
     pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-[4][0-9a-f]{3}-[89AB][0-9a-f]{3}-[0-9a-f]{12}$"
 required: [uuid]
