fix uuid regex lowercase

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/uuid-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/uuid-1.0.0.yaml
@@ -14,6 +14,6 @@ properties:
   uuid:
     description: The UUID with characters in lowercase.
     type: string
-    pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-[4][0-9a-f]{3}-[89AB][0-9a-f]{3}-[0-9a-f]{12}$"
+    pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-[4][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$"
 required: [uuid]
 ...
