--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/graph-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/graph-1.0.0.yaml
@@ -5,7 +5,7 @@ id: "http://weldx.bam.de/schemas/weldx/core/graph/graph-1.0.0"
 tag: "tag:weldx.bam.de:weldx/core/graph/graph-1.0.0"
 
 title: |
-  Graph edge.
+  Directed Graph.
 description: |
   A directed graph.
 
