--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_edge-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_edge-1.0.0.yaml
@@ -1,13 +1,13 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/core/graph/edge-1.0.0"
-tag: "tag:weldx.bam.de:weldx/core/graph/edge-1.0.0"
+id: "http://weldx.bam.de/schemas/weldx/core/graph/di_edge-1.0.0"
+tag: "tag:weldx.bam.de:weldx/core/graph/di_edge-1.0.0"
 
 title: |
   Graph edge.
 description: |
-  A graph edge.
+  A directed graph edge.
 
 type: object
 properties:
@@ -15,7 +15,7 @@ properties:
     type: string
     enum: [fwd, bwd]
   target_node:
-    tag: "tag:weldx.bam.de:weldx/core/graph/node-1.0.0"
+    tag: "tag:weldx.bam.de:weldx/core/graph/di_node-1.0.0"
   attributes:
     type: object
 
