--- a/doc/rtd_environment.yml
+++ b/doc/rtd_environment.yml
@@ -15,6 +15,12 @@ dependencies:
   - pydata-sphinx-theme=0.5.0
   - numpydoc>=0.5
   - sphinx-autodoc-typehints
+  # debug
+  - decorator=4.4.2
+  - docutils=0.17
+  - nbformat=5.1.2
+  - prometheus_client=0.9.0
+  - sqlite=3.35.3
   # pip packages
   - pip
   - pip:
