--- a/doc/rtd_environment.yml
+++ b/doc/rtd_environment.yml
@@ -7,20 +7,16 @@ dependencies:
   - ipykernel
   - ipywidgets
   # documentation
-  - sphinx=3.5.2
+  - sphinx
   - recommonmark
   - sphinxcontrib-napoleon
-  - nbsphinx=0.8.1
+  - nbsphinx
   - sphinx-copybutton
-  - pydata-sphinx-theme=0.5.0
+  - pydata-sphinx-theme
   - numpydoc>=0.5
   - sphinx-autodoc-typehints
-  # debug
-  - decorator=4.4.2
+  # GH332
   - docutils=0.16
-  - nbformat=5.1.2
-  - prometheus_client=0.9.0
-  - sqlite=3.35.3
   # pip packages
   - pip
   - pip:
