--- a/doc/rtd_environment.yml
+++ b/doc/rtd_environment.yml
@@ -15,6 +15,8 @@ dependencies:
   - pydata-sphinx-theme
   - numpydoc>=0.5
   - sphinx-autodoc-typehints
+  # GH332
+  - docutils=0.16
   # pip packages
   - pip
   - pip:
