--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_edge-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_edge-1.0.0.yaml
@@ -9,6 +9,24 @@ title: |
 description: |
   A directed graph edge.
 
+examples:
+  -
+    - An edge pointing to node A.
+    - |
+      !<tag:weldx.bam.de:weldx/core/graph/di_edge-1.0.0>
+        direction: fwd
+        target_node: !<tag:weldx.bam.de:weldx/core/graph/di_node-1.0.0>
+          name: A
+          edges: []
+  -
+    - An edge pointing from node B.
+    - |
+      !<tag:weldx.bam.de:weldx/core/graph/di_edge-1.0.0>
+        direction: bwd
+        target_node: !<tag:weldx.bam.de:weldx/core/graph/di_node-1.0.0>
+          name: B
+          edges: []
+
 type: object
 properties:
   direction:
