--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_node-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_node-1.0.0.yaml
@@ -7,6 +7,32 @@ tag: "tag:weldx.bam.de:weldx/core/graph/di_node-1.0.0"
 title: |
   Node of a directed graph.
 
+examples:
+  -
+    - A simple node without any child edges.
+    - |
+      !<tag:weldx.bam.de:weldx/core/graph/di_node-1.0.0>
+        name: A
+        edges: []
+  -
+    - A simple node without any child edges and a simple attribute.
+    - |
+      !<tag:weldx.bam.de:weldx/core/graph/di_node-1.0.0>
+        name: A
+        attributes: {node_attr: 3.14}
+        edges: []
+  -
+    - A node with one child node.
+    - |
+      !<tag:weldx.bam.de:weldx/core/graph/di_node-1.0.0>
+        name: A
+        edges:
+        - !<tag:weldx.bam.de:weldx/core/graph/di_edge-1.0.0>
+          direction: fwd
+          target_node: !<tag:weldx.bam.de:weldx/core/graph/di_node-1.0.0>
+            name: B
+            edges: []
+
 type: object
 properties:
   name:
