--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -50,17 +50,19 @@ jobs:
         run: |
             if not exist %userprofile%\.matplotlib\ ( mkdir %userprofile%\.matplotlib\ )
             echo backend: Agg > %userprofile%\.matplotlib\matplotlibrc
+            python -c "import matplotlib as m; print(m.matplotlib_fname())"
+            python -c "import matplotlib as m; print(m.rc_params()['backend'])"
         shell: cmd
 
       - name: run pytest
         run: |
-          pytest -n 2 --runslow
+          pytest -n 2 --runslow --dist=loadfile
           echo "Exited with '$?'"
 
       - name: run pytest on notebooks (append coverage)
         if: (matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')
         run: |
-          pytest -n 2 --nbval --current-env --cov-append tutorials/
+          pytest -n 2 --dist loadfile --nbval --current-env --cov-append tutorials/
           echo "Exited with '$?'"
 
       - name: coverage xml (combination is performed by pytest-cov)
