--- a/setup.cfg
+++ b/setup.cfg
@@ -91,7 +91,7 @@ match_dir = [^\.][^\docs].*
 ignore = D203,D213
 
 [tool:pytest]
-addopts = --tb=short --color=yes -rs --cov=weldx --cov-report=term-missing:skip-covered --dist=loadfile -n1
+addopts = --tb=short --color=yes -rs --cov=weldx --cov-report=term-missing:skip-covered
 #addopts = --tb=short --color=yes -rs -p no:cov
 # custom test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
 markers =
