pass dist method

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,7 +118,7 @@ jobs:
       - name: run pytest
         run: |
           pip install pytest pytest-cov pytest-xdist
-          pytest -n2
+          pytest -n2 --dist=loadfile
 
       - name: set pypi test repo defaults
         run: |
