Revert "[ci/appveyor] use conda-recipe for bld/test"
This reverts commit 6cd8294b849ad9b35e0348ab0b12fd3a8f5298b8.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,10 +13,12 @@ install:
   - cmd: conda config --add channels conda-forge
   - cmd: conda init cmd.exe
   - cmd: conda activate
-  - cmd: conda install -q mamba boa
+  - cmd: conda install -q mamba
   - cmd: mamba info -a
+  - cmd: mamba env create -f ./environment.yml
+  - activate weldx
 
 build: false
 
 test_script:
-  - conda mambabuild conda.recipe
+  - pytest
