typo-ci exceptions

--- a/.typo-ci.yml
+++ b/.typo-ci.yml
@@ -58,6 +58,7 @@ excluded_words:
   - linalg
   - matmul
   - ndarray
+  - ndarrays
   - ndim
   - newaxis
   - tolist
@@ -154,6 +155,9 @@ excluded_words:
   - nsecond
   - iterutils
   - pyproject
+  - pyargs
+  - argnames
+  - argvalues
   # German ---------------------------------------
   - Bundesanstalt
   - für
