copy conftest to testing dir

--- a/devtools/conda.recipe/meta.yaml
+++ b/devtools/conda.recipe/meta.yaml
@@ -28,6 +28,8 @@ test:
   requires:
     - pytest
     - pytest-xdist
+  files:
+    - ../../conftest.py
   imports:
     - weldx
     - weldx.visualization
