--- a/devtools/conda.recipe/meta.yaml
+++ b/devtools/conda.recipe/meta.yaml
@@ -2,7 +2,7 @@
 
 package:
   name: weldx
-  version: {{ data["version"] }}
+  version: {{ data.get("version") }}
 
 source:
     path: ../..
@@ -13,7 +13,7 @@ build:
   script: pip install . -v
 
 requirements:
-  host:
+  build:
     - pip
     - setuptools_scm
     - python >=3.8
@@ -29,7 +29,7 @@ test:
     - pytest
     - pytest-xdist
   files:
-    - ../../conftest.py
+    - conftest.py
   imports:
     - weldx
     - weldx.visualization
