--- a/devtools/conda.recipe/meta.yaml
+++ b/devtools/conda.recipe/meta.yaml
@@ -2,10 +2,10 @@
 
 package:
   name: weldx
-  version: {{ data["version"] }}
+  version: {{ data.get("version") }}
 
 source:
-    path: ..
+    path: ../..
 
 build:
   number: 0
@@ -13,7 +13,7 @@ build:
   script: pip install . -v
 
 requirements:
-  host:
+  build:
     - pip
     - setuptools_scm
     - python >=3.8
@@ -28,6 +28,8 @@ test:
   requires:
     - pytest
     - pytest-xdist
+  files:
+    - conftest.py
   imports:
     - weldx
     - weldx.visualization
