Add compare_nested to util (#328)
* add equality compare_nested function for nested data types (mappings, containers, etc.)
* [util] no python for loops, but numpy vectorization for vector/matrix comparisons.
* load sympy lazily (saves 0.3s on initial weldx import)
* [test] set default dist=loadfile (works for unit tests and notebooks)
* use compare_nested in validator tests
* restore setup.cfg default testing options and put dist=loadfile in CI
* treat ndarraytype (asdf) as well
* ignore missing docstrings D102

Co-authored-by: Cagtay Fabry <43667554+CagtayFabry@users.noreply.github.com>

--- a/devtools/conda.recipe/meta.yaml
+++ b/devtools/conda.recipe/meta.yaml
@@ -34,7 +34,7 @@ test:
     - weldx
     - weldx.visualization
   commands:
-    - pytest --pyargs weldx.tests -n auto
+    - pytest --pyargs weldx.tests -n auto --dist=loadfile
 
 about:
   home: https://www.bam.de/Content/EN/Projects/WelDX/weldx.html
