--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,7 @@ recursive-include weldx/asdf/schemas *.yaml
 
 prune .binder
 prune .github
-prune conda.recipe
+prune devtools
 prune doc
 prune scripts
 prune tutorials
