--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/signal-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/signal-1.0.0.yaml
@@ -28,7 +28,8 @@ properties:
   unit:
     type: string
   data:
-    tag: "tag:weldx.bam.de:weldx/measurement/data-1.0.0"
+    tag: "tag:weldx.bam.de:weldx/core/data_array-1.0.0"
+    #tag: "tag:weldx.bam.de:weldx/measurement/data-1.0.0"
 
 
 propertyOrder: [signal_type, unit, data]
