--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/measurement-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/measurement-1.0.0.yaml
@@ -13,7 +13,7 @@ properties:
   data:
     type: array
     items:
-      tag: "tag:weldx.bam.de:weldx/core/data_array-1.0.0"
+      tag: "tag:weldx.bam.de:weldx/core/time_series-1.0.0"
       #tag: "tag:weldx.bam.de:weldx/measurement/data-1.0.0"
 
   measurement_chain:
