--- a/weldx/asdf/schemas/weldx.bam.de/weldx/equipment/generic_equipment-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/equipment/generic_equipment-1.0.0.yaml
@@ -18,14 +18,9 @@ examples:
         name: Beckhoff ELM3002-0000
         sources: []
         data_transformations:
-        - &id004 !<tag:weldx.bam.de:weldx/measurement/data_transformation-1.0.0>
+        - &id004 !<tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0>
           name: AD conversion current measurement
-          input_signal: !<tag:weldx.bam.de:weldx/measurement/signal-1.0.0>
-              signal_type: analog
-              unit: V
-          output_signal: !<tag:weldx.bam.de:weldx/measurement/signal-1.0.0>
-            signal_type: digital
-            unit: ''
+          type_transformation: AD
           error: !<tag:weldx.bam.de:weldx/measurement/error-1.0.0>
             deviation: !unit/quantity-1.1.0 {unit: percent, value: 0.01}
           func: !<tag:weldx.bam.de:weldx/core/mathematical_expression-1.0.0>
