[pydocstyle] use numpy convention

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,8 @@ install_requires =
     ipywidgets
     k3d
     meshio
+    attrdict
+
 include_package_data = True
 
 [options.extras_require]
@@ -86,9 +88,10 @@ exclude =
     doc/conf.py,
 
 [pydocstyle]
+# convention numpy is currently equivalent to ignoring 'D107', 'D203', 'D212', 'D213', 'D402', 'D413'
+convention = numpy
 match = (?!__)(?!_version)(?!conftest).*\.py
 match_dir = [^\.][^\docs].*
-ignore = D203,D213
 
 [tool:pytest]
 addopts = --tb=short --color=yes -rs --cov=weldx --cov-report=term-missing:skip-covered --doctest-modules
